--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <title>Site Web de Daniel Im</title>
 <h1>Site Web de Daniel Im</h1>
 <b>Pour le cour ICS3UA</b>
-<p> <a href=exercice3.html </a></p>
+<p> <a href=exercice3.html> Exercice 3 </a></p>
